Flight Price Prediction.ipynb

--- a/Flight Price Prediction.ipynb
+++ b/Flight Price Prediction.ipynb
@@ -3210,8 +3210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Even though random forest reg have R2 squared value greater than the other model we will be conclude Decision Tree Regressor as a better model as we were able to find the best model\n",
-    "#using the best estimator."
+    "#Even though random forest reg have R2 squared value greater than the other model we will be conclude Decision Tree Regressor as a\n",
+    "#better model as we were able to find the best model using the best estimator."
    ]
   }
  ],
